src/test/ui/derives/derives-span-Hash-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum-struct-variant.rs:9:6
   |
LL | #[derive(Hash)]
   |          ---- in this derive macro expansion
...
LL |      x: Error
   |      ^^^^^^^^ the trait `Hash` is not implemented for `Error`
   |
   = note: this error originates in the derive macro `Hash` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
